# nbv_exploration

./: CMakeLists.txt  CMakeLists.txt~  README.md  nbv_exploration.rosinstall  package.xml
batch/: IG3.yaml  Pred3.yaml  Prop_w0.5-NN_3.yaml  Prop_w1.0-NN_3.yaml  Proposed_Frontier_4.yaml
batch/_/: Proposed_Frontier_4.yaml
config/: multi_nbv_rtabmap.rviz  navigation_settings.yaml  nbv_batch_settings.yaml  nbv_rtabmap.rviz  nbv_settings.yaml  nbv_settings_batch.yaml  nbv_settings_uav.yaml  profiling_settings.yaml  sensor_settings.yaml  sensor_settings.yaml~  symmetry_detection_settings.yaml  test_sensor_sync.yaml  test_symmetry_detection_settings.yaml
include/: class_ViewGenerator.hpp  class_ViewSelecter.hpp  keyboard_teleop.h
include/control/: vehicle_control_base.h  vehicle_control_floating_sensor.h  vehicle_control_iris.h
include/culling/: occlusion_culling.h
include/nbv_exploration/: class_ViewGenerator.hpp  class_ViewSelecter.hpp  common.h  mapping_module.h  model_profiler_base.h  model_profiler_bounded_box.h  model_profiler_circular_adaptive.h  nbv_history.h  nbv_loop.h  sensing_and_mapping.h  symmetry_detector.h  termination_check_base.h  termination_check_entropy_stagnation.h  termination_check_global_entropy_percent_diff.h  termination_check_local_entropy_per_voxel.h  termination_check_max_iterations.h  termination_check_utility_threshold.h  view_generator.h  view_generator_adaptive_nn.h  view_generator_base.h  view_generator_frontier.h  view_generator_nn.h  view_generator_nn_adaptive.h  view_generator_nn_frontier.h  view_selecter.h  view_selecter_base.h  view_selecter_ig.h  view_selecter_ig_exp_distance.h  view_selecter_point_density.h  view_selecter_proposed.h  view_selecter_proposed_ray_length.h  view_selecter_symmetry_prediction.h
include/utilities/: console_utility.h  pose_conversion.h  time_profiler.h
include/vehicle/: floating_sensor_position_plugin.h
launch/: launch_world.launch  nbv_loop.launch  nbv_loop_multi.launch  nbv_loop_uav.launch  nbv_main.launch  nbv_setup.launch  nbv_setup_multi.launch  nbv_setup_uav.launch  sensing.launch  spawn_vehicle_floating_sensor.launch  spawn_vehicle_uav.launch  test_octo.launch  test_sensor_sync.launch  test_symmetry_detection.launch
models/: etihad_nowheels_nointernal_scaled_newdensed.pcd
models/pcd/etihad/: etihad_head.pcd  etihad_head2.pcd  etihad_hull.pcd  etihad_tail.pcd  etihad_tail2.pcd  etihad_turbine.pcd  etihad_turbine2.pcd  etihad_wheels.pcd  etihad_wing.pcd  etihad_wing2.pcd
msg/: IterationInfo.msg
rviz/: nbv.rviz  nbv_rtabmap.rviz
scripts/: batch_plot_results.py  batch_simulate.py  iris_speed_waypoint.py  iris_waypoint.py  plot_iteration_info.py
src/: class_ViewGenerator.cpp  class_ViewSelecter.cpp  correct_laser_scan.cpp  correct_laser_scan_and_depth.cpp  keyboard_teleop.cpp  mapping_module.cpp  model_profiler_base.cpp  model_profiler_bounded_box.cpp  model_profiler_circular_adaptive.cpp  nbv_history.cpp  nbv_loop.cpp  nbv_main.cpp  object_segmentation.cpp  sensing_and_mapping.cpp  symmetry_detector.cpp  termination_check_base.cpp  termination_check_entropy_stagnation.cpp  termination_check_global_entropy_percent_diff.cpp  termination_check_local_entropy_per_voxel.cpp  termination_check_max_iterations.cpp  termination_check_utility_threshold.cpp  test_octomap.cpp  test_symmetry_detection.cpp  view_generator.cpp  view_generator_adaptive_nn.cpp  view_generator_base.cpp  view_generator_frontier.cpp  view_generator_nn.cpp  view_generator_nn_adaptive.cpp  view_generator_nn_frontier.cpp  view_selecter.cpp  view_selecter_base.cpp  view_selecter_ig.cpp  view_selecter_ig_exp_distance.cpp  view_selecter_point_density.cpp  view_selecter_proposed.cpp  view_selecter_proposed_ray_length.cpp  view_selecter_symmetry_prediction.cpp  wall_follower.cpp
src/component_test/: evaluate_coverage.cpp  test_cloud_sync.cpp  test_sensor_sync.cpp  test_symmetry_detection.cpp  voxel_grid_occlusion_estimation.cpp
src/control/: vehicle_control_base.cpp  vehicle_control_floating_sensor.cpp  vehicle_control_iris.cpp
src/culling/: frustum_culling.cpp  occlusion_culling.cpp  voxel_grid_occlusion_estimation.cpp
src/lib/MeanShift/: MeanShift.cpp  MeanShift.h
src/utilities/: pcd2ply.cpp  pcd_cut_cuboid.cpp  time_profiler.cpp
src/utility/: ply2pcd.cpp
src/vehicle/: floating_sensor_position_plugin.cpp
srv/: MappingSrv.srv
urdf/: component_snippets.xacro  floating_sensor.gazebo  floating_sensor.sdf  iris_nbv_exploration.gazebo  iris_nbv_exploration_2_sensors.gazebo
worlds/: box.world  etihad_aircraft_world.world  etihad_aircraft_world_half.world
